# rast

./: CMakeLists.txt  README.md  imgui.ini
src/: image.c  image.h  imgui.c  imgui.h  main.c  mat.c  mat.h  mem.c  rasterizer.c  rasterizer.h  semaphore.c  semaphore.h  texture.c  texture.h  thread_worker.c  thread_worker.h  util.c  vec.c  vec.h  window.c  window.h
src/core/: image.c  image.h  list.c  list.h  mem.c  mem.h  semaphore.c  thread_worker.c  thread_worker.h  util.h
src/debug/: capture.c  capture.h  diag.c  diag.h
src/graphics/: image.c  image.h  imgui.c  rasterizer.c  rasterizer.h  texture.c  texture.h  window.c
src/math/: geo.h  mat.c  mat.h  vec.c
